add all upload url

--- a/app/views/expenses/upload_detail.html.erb
+++ b/app/views/expenses/upload_detail.html.erb
@@ -2,3 +2,9 @@
 <br/>
 <br/>
 <%= link_to "Uplaod Summary View", inexpenses_path()  %>
+<br/>
+<br/>
+<%= link_to "Uplaod Category View", categories_path()  %>
+<br/>
+<br/>
+<%= link_to "Uplaod  InCategory View", incategories_path()  %>
