remove upload data or change some word

--- a/app/views/expenses/expense_list.html.erb
+++ b/app/views/expenses/expense_list.html.erb
@@ -1,7 +1,7 @@
 
 <div>
   <table>
-    <%= link_to "Upload Data", upload_detail_path(),:class => "detail_upload" %>
+    <%#= link_to "Upload Data", upload_detail_path(),:class => "detail_upload" %>
     <tr>
       <th class = "page-header">Operating Expense</th>
       <th class = "page-header">MTD Actual</th>
