--- a/app/views/expenses/upload_detail.html.erb
+++ b/app/views/expenses/upload_detail.html.erb
@@ -1,10 +1,10 @@
-<%= link_to "Uplaod Display View", expenses_path()  %>
+<%= link_to "Upload Display View", expenses_path()  %>
 <br/>
 <br/>
-<%= link_to "Uplaod Summary View", inexpenses_path()  %>
+<%= link_to "Upload Summary View", inexpenses_path()  %>
 <br/>
 <br/>
-<%= link_to "Uplaod Category View", categories_path()  %>
+<%= link_to "Upload Category View", categories_path()  %>
 <br/>
 <br/>
-<%= link_to "Uplaod  InCategory View", incategories_path()  %>
+<%= link_to "Upload  InCategory View", incategories_path()  %>
